# crm-e

./: .env.example  .gitignore  .txt  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
docs/: index.html  privacy.html  terms.html
docs/.well-known/: microsoft-identity-association.json
src/: App.tsx  auth.ts  i18n.ts  index.css  main.tsx  store.tsx  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/hooks/: useDialog.ts  useLang.ts
src/tabs/: Applications.tsx  Dashboard.tsx  Data.tsx  Files.tsx  Jobs.tsx  Leads.tsx  Profile.tsx  Templates.tsx
